--- a/code (2).html
+++ b/code (2).html
@@ -363,6 +363,13 @@
   const analytics = firebase.analytics(app);
   const db = firebase.firestore(); // هذا لقاعدة البيانات Firestore
 </script>
+<!-- Firebase Firestore -->
+<script src="https://www.gstatic.com/firebasejs/11.27.0/firebase-firestore.js"></script>
+
+<script>
+  // تهيئة Firestore
+  const db = firebase.firestore();
+</script>
 
 </body>   
 </html>
